Mobile UI and Desktop UI stabalized v0 (#320)
Co-authored-by: Naren A <ntbnaren7@Narens-MacBook-Air.local>

--- a/index.html
+++ b/index.html
@@ -4,16 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>100 Days of Web Development - Showcase</title>
+    <title>100 Days of Web Development</title>
 
 
     <meta name="theme-color" content="#0a0a0a">
     <link rel="manifest" href="manifest.webmanifest">
-    <link rel="stylesheet" href="website/style.css">
-
     <link rel="stylesheet" href="website/styles/main.css">
-
-    <link rel="stylesheet" href="website/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -106,11 +102,7 @@
 
     <footer class="main-footer">
         <div class="footer-grid">
-
             <div class="footer-col about-col">
-
-            <div class="footer-col">
-
                 <h4>
                     <svg class="icon icon-sm" viewBox="0 0 24 24">
                         <path
@@ -131,7 +123,7 @@
                     <a href="https://instagram.com" class="social-link" aria-label="Instagram">
                         <svg class="icon icon-sm" viewBox="0 0 24 24">
                             <defs>
-                                <linearGradient id="ig-grad" x1="0%" y1="0%" x2="100%" y2="100%">
+                                <linearGradient id="ig-grad-index" x1="0%" y1="0%" x2="100%" y2="100%">
                                     <stop offset="0%" style="stop-color:#f09433;stop-opacity:1" />
                                     <stop offset="25%" style="stop-color:#e6683c;stop-opacity:1" />
                                     <stop offset="50%" style="stop-color:#dc2743;stop-opacity:1" />
@@ -139,11 +131,11 @@
                                     <stop offset="100%" style="stop-color:#bc1888;stop-opacity:1" />
                                 </linearGradient>
                             </defs>
-                            <rect x="2" y="2" width="20" height="20" rx="5" ry="5" stroke="url(#ig-grad)"
+                            <rect x="2" y="2" width="20" height="20" rx="5" ry="5" stroke="url(#ig-grad-index)"
                                 stroke-width="2" fill="none"></rect>
-                            <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z" stroke="url(#ig-grad)"
+                            <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z" stroke="url(#ig-grad-index)"
                                 stroke-width="2" fill="none"></path>
-                            <line x1="17.5" y1="6.5" x2="17.51" y2="6.5" stroke="url(#ig-grad)" stroke-width="2">
+                            <line x1="17.5" y1="6.5" x2="17.51" y2="6.5" stroke="url(#ig-grad-index)" stroke-width="2">
                             </line>
                         </svg>
                     </a>
@@ -173,16 +165,11 @@
                         <polyline points="6 9 12 15 18 9"></polyline>
                     </svg>
                 </summary>
-
-            <div class="footer-col">
-                <h4>Quick Links</h4>
-
                 <ul class="footer-links">
                     <li><a href="#" class="active-link">Home</a></li>
                     <li><a href="website/projects.html">Projects</a></li>
                     <li><a href="website/about.html">About Challenge</a></li>
                     <li><a href="website/contributors.html">Contributors</a></li>
-
                     <li><a href="website/contact.html">Contact</a></li>
                 </ul>
             </details>
@@ -195,20 +182,11 @@
                         <polyline points="6 9 12 15 18 9"></polyline>
                     </svg>
                 </summary>
-
-                    <li><a href="website/structure.html">Structure</a></li>
-                </ul>
-            </div>
-
-            <div class="footer-col">
-                <h4>Technologies</h4>
-
                 <div class="tech-tags">
                     <span class="tech-tag tag-html">HTML5</span>
                     <span class="tech-tag tag-css">CSS3</span>
                     <span class="tech-tag tag-js">JavaScript</span>
                 </div>
-
             </details>
 
             <details class="footer-col" open>
@@ -219,20 +197,11 @@
                         <polyline points="6 9 12 15 18 9"></polyline>
                     </svg>
                 </summary>
-
-            </div>
-
-            <div class="footer-col">
-                <h4>Legal</h4>
-
                 <div class="legal-links">
                     <a href="#" class="legal-btn">Privacy Policy</a>
                     <a href="#" class="legal-btn">Terms of Service</a>
                 </div>
-
             </details>
-
-            </div>
 
         </div>
 
@@ -302,22 +271,8 @@
 
     <script src="website/theme.js"></script>
     <script src="website/script.js"></script>
-
-
-    <script src="website/theme.js"></script>
-
-    <script src="/website/theme.js"></script>
-    <script src="/website/script.js"></script>
-
-    <script src="website/theme.js"></script>
-    <script src="website/script.js"></script>
-
     <script src="website/tracker.js"></script>
     <script src="website/3d-tilt.js"></script>
-
-    <script src="/website/theme.js"></script>
-    <script src="/website/script.js"></script>
-    <script src="website/tracker.js"></script>
 
 </body>
 
