fix text visibility in LIGHT THEME #1067 (#1068)
* fix

* fix

---------

Co-authored-by: Neeru <neerugangarh@gmail.com>

--- a/index.html
+++ b/index.html
@@ -493,6 +493,16 @@
           max-width: 300px;
         }
       }
+
+      .nav-link::after {
+        display: none;
+      }
+
+      .nav-link:hover::after,
+      .nav-link.active::after {
+        display: none;
+      }
+
     </style>
   </head>
   <!-- Fire Cursor -->
