--- a/website/pages/dashboard.html
+++ b/website/pages/dashboard.html
@@ -16,7 +16,7 @@
       justify-content: center;
       align-items: center;
       text-align: center;
-      padding-top: 100px;
+      padding-top: calc(64px + var(--space-4));
     }
 
     .hero-title {
