add quiz game project (#1200)
* add quiz game project

* fix major bugs and documentation

---------

Co-authored-by: Subham Nayak <sn343555@gmail.com>

--- a/public/Day 186/index.html
+++ b/public/Day 186/index.html
@@ -1,6 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Quiz Game</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <div><h2 class="h">Game Time</h2>
+       </div>
+        
+            <div id="ques" class="hidden">
+                <h2 id="ques-text"></h2>
+                <ul id="choice-list"></ul>
+                <button id="next">Next-Question</button>
+     </div>
+            <div id="res-container" class="hidden">
+                <p>Your score:</p>
+                <p id="score"></p>
+                <button id="rebtn">Restart Quiz</button>
+            </div>
+            <button id="btn">Start Quiz</button>
+        
+    </div>
+    <script src="script.js"></script>
+    </body>
+=======
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Doodle Study Buddy Interactive</title>
@@ -292,4 +319,5 @@ function getAIPopup(){
 </script>
 
 </body>
+
 </html>
