Project Submission and Review System (#1270)
* Firebase API Keys in login.js

* Incorrect Redirect Path After Login

* fixed error

* Demo Login Fails Due to Non-Existent Demo Account

* Incomplete Project Data in Dashboard

* doc: Placeholder Content in Many Project Days

* feat: Real User Authentication and Data Persistence

* enhance: Community Discussion Forum

* User Dashboard for Progress Tracking

* Project Submission and Review System

* feat: User Dashboard for Progress Tracking

* Community Forum

* Project Submission and Review System

--- a/website/pages/dashboard.html
+++ b/website/pages/dashboard.html
@@ -874,7 +874,16 @@
           <span class="status-dot"></span>
         </div>
       </div>
-    </div>
+
+      <!-- Status Card -->
+      <div class="card stat-card status-card">
+        <h3 class="text-secondary stat-label">Status</h3>
+        <div class="stat-value status-indicator">
+          <span id="userStatus" class="text-success">Active</span>
+          <span class="status-dot"></span>
+        </div>
+        <p class="stat-desc">Mission Status</p>
+      </div>
 
     <!-- Global Arena Widget -->
     <section class="section" style="margin-top: 40px;">
