--- a/public/Day 02/index.html
+++ b/public/Day 02/index.html
@@ -6,7 +6,7 @@
   <title>InnovateTech | Responsive Landing Page</title>
 
   <!-- Fonts & Icons -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Montserrat:wght@800;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Montserrat:wght@800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
 
   <!-- CSS -->
@@ -14,9 +14,13 @@
 </head>
 <body>
 
+<!-- HEADER -->
 <header>
   <div class="container header-container">
-    <div class="logo"><i class="fas fa-rocket"></i> InnovateTech</div>
+
+    <div class="logo">
+      <i class="fas fa-rocket"></i> InnovateTech
+    </div>
 
     <button class="mobile-menu-btn" id="mobileMenuBtn">
       <i class="fas fa-bars"></i>
@@ -30,72 +34,143 @@
         <li><a href="#contact" class="btn btn-primary">Get Started</a></li>
       </ul>
     </nav>
+
   </div>
 </header>
 
 <!-- HERO -->
 <section class="hero" id="home">
   <div class="container hero-container">
+
     <div class="hero-content">
-      <h1>Transform Your Business With Innovative Technology</h1>
-      <p>We build smart digital solutions to grow your business faster and smarter.</p>
+      <h1>Transform Your Business With Innovation</h1>
+      <p>We build digital solutions that help your business grow faster.</p>
+
       <div class="hero-btns">
         <a href="#" class="btn btn-primary">Start Free Trial</a>
-        <a href="#" class="btn btn-secondary">Live Demo</a>
+        <a href="#" class="btn btn-outline">Live Demo</a>
       </div>
     </div>
+
     <div class="hero-image">
-      <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71" alt="Tech">
+      <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71" alt="Technology">
     </div>
+
   </div>
 </section>
 
 <!-- FEATURES -->
 <section class="features" id="features">
   <div class="container">
+
     <h2 class="section-title">Powerful Features</h2>
 
     <div class="features-grid">
-      <div class="feature-card"><i class="fas fa-chart-line"></i><h3>Analytics</h3><p>Track performance in real time.</p></div>
-      <div class="feature-card"><i class="fas fa-robot"></i><h3>AI Automation</h3><p>Automate your daily tasks.</p></div>
-      <div class="feature-card"><i class="fas fa-shield-alt"></i><h3>Security</h3><p>Enterprise-grade protection.</p></div>
-      <div class="feature-card"><i class="fas fa-cloud"></i><h3>Cloud Sync</h3><p>Access anywhere anytime.</p></div>
-      <div class="feature-card"><i class="fas fa-mobile"></i><h3>Responsive</h3><p>Works on all devices.</p></div>
-      <div class="feature-card"><i class="fas fa-headset"></i><h3>Support</h3><p>24/7 technical support.</p></div>
+
+      <div class="feature-card">
+        <i class="fas fa-chart-line"></i>
+        <h3>Analytics</h3>
+        <p>Track performance easily.</p>
+      </div>
+
+      <div class="feature-card">
+        <i class="fas fa-robot"></i>
+        <h3>AI Automation</h3>
+        <p>Automate daily tasks.</p>
+      </div>
+
+      <div class="feature-card">
+        <i class="fas fa-shield-alt"></i>
+        <h3>Security</h3>
+        <p>Top-level protection.</p>
+      </div>
+
+      <div class="feature-card">
+        <i class="fas fa-cloud"></i>
+        <h3>Cloud Sync</h3>
+        <p>Access anywhere.</p>
+      </div>
+
+      <div class="feature-card">
+        <i class="fas fa-mobile"></i>
+        <h3>Responsive</h3>
+        <p>All device support.</p>
+      </div>
+
+      <div class="feature-card">
+        <i class="fas fa-headset"></i>
+        <h3>Support</h3>
+        <p>24/7 Help Center.</p>
+      </div>
+
     </div>
+
   </div>
 </section>
 
 <!-- TESTIMONIALS -->
 <section class="testimonials" id="testimonials">
+
   <div class="container">
+
     <h2 class="section-title">What Clients Say</h2>
 
-    <div class="testimonial active">“Amazing service and powerful tools.”</div>
-    <div class="testimonial">“Helped scale our startup quickly.”</div>
-    <div class="testimonial">“Very professional support team.”</div>
+    <div class="testimonial active">
+
+      <p>"Amazing platform, very easy to use."</p>
+
+      <h4>Rahul Mehta</h4>
+      <span>Startup Founder</span>
+
+    </div>
+
+    <div class="testimonial">
+
+      <p>"Helped our business grow rapidly."</p>
+
+      <h4>Anita Sharma</h4>
+      <span>Marketing Manager</span>
+
+    </div>
+
+    <div class="testimonial">
+
+      <p>"Best customer support ever."</p>
+
+      <h4>Karan Patel</h4>
+      <span>Tech Lead</span>
+
+    </div>
 
     <div class="slider-btns">
-      <button id="prev">❮</button>
-      <button id="next">❯</button>
+      <button id="prev"><i class="fas fa-chevron-left"></i></button>
+      <button id="next"><i class="fas fa-chevron-right"></i></button>
     </div>
+
   </div>
+
 </section>
 
 <!-- CTA -->
 <section class="cta" id="contact">
+
   <h2>Ready to Grow Your Business?</h2>
-  <p>Start your free trial today.</p>
-  <a href="#" class="btn btn-secondary">Get Started</a>
+  <p>Join thousands of happy customers today.</p>
+
+  <a href="#" class="btn btn-light">Get Started</a>
+
 </section>
 
 <!-- FOOTER -->
 <footer>
-  <p>© 2026 InnovateTech. All rights reserved.</p>
+  <p>© 2026 InnovateTech. All Rights Reserved.</p>
 </footer>
 
-<button id="scrollTop"><i class="fas fa-arrow-up"></i></button>
+<button id="scrollTop">
+  <i class="fas fa-arrow-up"></i>
+</button>
 
 <script src="script.js"></script>
+
 </body>
 </html>
