--- a/website/pages/dashboard.html
+++ b/website/pages/dashboard.html
@@ -770,6 +770,9 @@
 
 <body>
   <!-- Main Dashboard -->
+   <button id="sidebar-open-btn" class="sidebar-open-btn" title="Open sidebar">
+    ☰
+  </button>
   <main class="container section">
     <!-- Search Bar -->
     <div class="search-bar-wrapper">
