--- a/website/pages/dashboard.html
+++ b/website/pages/dashboard.html
@@ -19,7 +19,9 @@
       text-align: center;
       padding-top: calc(64px + var(--space-4));
     }
-
+  .sidebar-open-btn{
+    color: white;
+  }
     /* Search Bar Styles */
     .search-bar-wrapper {
       margin-bottom: var(--space-6);
