--- a/website/pages/projects.html
+++ b/website/pages/projects.html
@@ -16,7 +16,9 @@
         text-align: center;
         padding: 120px 0 60px;
       }
-
+.sidebar-open-btn{
+    color: white;
+  }
       .search-wrapper {
         max-width: 600px;
         margin: 0 auto 40px;
@@ -263,6 +265,9 @@
 
 <body>
   <!-- Main Content -->
+     <button id="sidebar-open-btn" class="sidebar-open-btn" title="Open sidebar">
+    ☰
+  </button>
   <main class="container section">
     <div class="page-header animate-enter">
       <h1 class="heading" style="font-size: var(--text-4xl); margin-bottom: var(--space-4)">
